chore: modify template for audit

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -5,11 +5,11 @@
 
 \iftoday
 \noindent
-\makebox[\linewidth]{March 25, 2023}
+\makebox[\linewidth]{April 07, 2023}
 \makebox[\linewidth]{Last update: \today}
 \fi
 
-\import{./}{abstract.tex}
+% \import{./}{abstract.tex}
 
 \ifccs
 \input{ccs-keywords}
