--- a/title.tex
+++ b/title.tex
@@ -1,23 +1,32 @@
 \title{
-  A Unifying Theory of Everything
+  Mysten ECVRF and Ristretto255 Audit
 }
 \ifanonymous{\iflncs
 \author{}\institute{}
 \fi}
 \else
 \author{
-  Albert Einstein\inst{1,2}
+  Shresth Agrawal\inst{1,2}
+  Petros Angelatos\inst{1,3}
+  Pyrros Chaidos\inst{1,4}
+  Dionysis Zindros\inst{1,5}
 }
 \iflncs
 \institute{
-  Monsters University\and
-  Common Prefix
+  Common Prefix\and
+  Technical University of Munich\and 
+  National Technical University of Athens\and
+  University of Athens\and
+  Stanford University
 }
 \else
 \affiliation{
 \institution{
-  Monsters University\and
-  Common Prefix
+  Common Prefix\and
+  Technical University of Munich\and 
+  National Technical University of Athens\and
+  University of Athens\and
+  Stanford University
 }
 }
 \fi
