feat: Add draft audit report

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@
 \pdfbookmark[section]{References}{references}
 \bibliography{biblio,crypto,pubs}
 
+\pagebreak
 \import{./}{commonprefix.tex}
 
 \end{document}
