Fix LNCS format

--- a/main.tex
+++ b/main.tex
@@ -17,11 +17,11 @@
 \fi
 
 \iflncs
-\documentclass[11pt]{llncs}
+  \documentclass[runningheads]{llncs}
 \fi
 \ifccs
-\documentclass[sigconf, anonymous]{acmart}
-\input{ccs-preamble}
+  \documentclass[sigconf, anonymous]{acmart}
+  \input{ccs-preamble}
 \fi
 
 \usepackage{preamble}
