--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \fi
 
 \iflncs
-\documentclass[11pt]{llncs}
+\documentclass[runningheads]{llncs}
 \fi
 \ifccs
 \documentclass[sigconf, anonymous]{acmart}
